<resources>
    <string name="app_name">ApplicationForHealthy</string>
    <string name="login">Login to Facebook</string>
    <string name="Icon_height"></string>
    <string name="Icon_wigth"></string>
    <string name="height">ส่วนสูง</string>
    <string name="wight">น้ำหนัก</string>
    <string name="cm">ซม.</string>
    <string name="kg">กก.</string>
    <string name="nature">ลักษณะ</string>
    <string name="next">ถัดไป</string>
    <string name="tab">บันทึกกิจกรรม</string>
    <string name="Icon_note"></string>
    <string name="h">หัวเรื่อง</string>
    <string name="content">รายละเอียด</string>
    <string name="btn_con">ยืนยัน</string>
    <string name="title_activity_exercise1">exercise1Activity</string>
    <string name="tab_exercise">ออกกำลังกาย</string>
    <string name="period">เวลาที่แนะนำ</string>
    <string name="minute">นาที</string>
    <string name="guide_time">เวลาที่แนะนำ</string>
    <string name="number_time">จำนวนเวลาที่ออกกำลังกาย</string>
    <string name="input_time">เวลาที่แนะนำ</string>
    <string name="back_to_home">กลับไปหน้าแรก</string>
    <string name="tab_history">ประวัติจำนวนแคลอรี่</string>
    <string name="list_food">รายการอาหาร</string>
    <string name="list_exercise">รายการการออกกำลังกาย</string>

</resources>
