<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pimwimon.applicationforhealthy.Note2Activity">
    <TextView
        android:id="@+id/textView8"
        android:layout_width="385dp"
        android:layout_height="51dp"

        android:background="#4d5568"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="0dp"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="0dp"
        app:layout_constraintBottom_toTopOf="@+id/calendarView"
        android:layout_marginLeft="0dp"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_editor_absoluteX="1dp"
        tools:ignore="UnknownIdInLayout" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/note2"
        android:layout_marginBottom="0dp"
        app:layout_constraintBottom_toTopOf="@+id/calendarView"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="0dp"
        app:layout_constraintHorizontal_bias="0.047"
        app:layout_constraintVertical_bias="0.127"
        android:contentDescription="@string/Icon_height"
        tools:ignore="UnknownIdInLayout" />
    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tab"
        android:textSize="20sp"
        android:textColor="#FFFFFF"
        app:layout_constraintLeft_toRightOf="@+id/imageView3"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="@+id/textView8"
        app:layout_constraintTop_toTopOf="@+id/textView8"
        android:layout_marginTop="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView8"
        android:layout_marginBottom="0dp"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintVertical_bias="0.432" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/h"
        android:textSize="20sp"
        android:textColor="#000000"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="0dp"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintVertical_bias="0.167" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="249dp"
        android:layout_height="47dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="0dp"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="0dp"
        app:layout_constraintLeft_toRightOf="@+id/textView9"
        android:layout_marginLeft="0dp"
        app:layout_constraintHorizontal_bias="0.537"
        app:layout_constraintVertical_bias="0.246" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="251dp"
        android:layout_height="124dp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/editText2"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="0dp"
        app:layout_constraintHorizontal_bias="0.838"
        app:layout_constraintVertical_bias="0.073" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/content"
        android:layout_marginLeft="0dp"
        android:textSize="18sp"
        android:textColor="#000000"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/editText4"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="0dp"
        app:layout_constraintHorizontal_bias="0.695"
        app:layout_constraintVertical_bias="0.234" />

    <Button
        android:id="@+id/button2"
        android:layout_width="223dp"
        android:layout_height="40dp"
        android:text="@string/btn_con"
        android:background="#4d5568"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintVertical_bias="0.756" />

</android.support.constraint.ConstraintLayout>
