<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pimwimon.applicationforhealthy.Exercise1Activity"
    android:background="@drawable/bg"
    >

    <TextView
        android:id="@+id/textView8"
        android:layout_width="385dp"
        android:layout_height="51dp"
        android:background="#4d5568"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="0dp"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="0dp"
        app:layout_constraintBottom_toTopOf="@+id/calendarView"
        android:layout_marginLeft="0dp"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_editor_absoluteX="1dp"
        tools:ignore="UnknownIdInLayout" />

    <TextView
        android:id="@+id/bg"
        android:layout_width="190dp"
        android:layout_height="165dp"
        android:background="#4d5568"
        android:layout_marginTop="0dp"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"
        app:layout_constraintVertical_bias="0.132"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:ignore="UnknownIdInLayout"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        app:layout_constraintBottom_toBottomOf="parent" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/exericeh"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView8"
        android:layout_marginBottom="0dp"
        app:layout_constraintHorizontal_bias="0.047"
        app:layout_constraintVertical_bias="1.0"
        android:contentDescription=""
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tab_exercise"
        android:textSize="20sp"
        android:textColor="#FFFFFF"
        app:layout_constraintLeft_toRightOf="@+id/imageView4"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView8"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView8"
        android:layout_marginBottom="8dp"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintVertical_bias="0.444" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/period"
        android:textSize="18sp"
        android:textColor="#000000"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/editText5"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="0dp"
        app:layout_constraintHorizontal_bias="0.761"
        app:layout_constraintVertical_bias="0.547" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textSize="16sp"
        android:textColor="#ececee"
        android:textAlignment="center"
        android:inputType="textPersonName"
        android:text="@string/guide_time"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="0dp"
        app:layout_constraintHorizontal_bias="0.613"
        app:layout_constraintVertical_bias="0.552" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/minute"
        android:textSize="18sp"
        android:textColor="#000000"
        app:layout_constraintLeft_toRightOf="@+id/editText5"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="0dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="0dp"
        app:layout_constraintVertical_bias="0.595"
        app:layout_constraintHorizontal_bias="0.309" />

    <Button
        android:id="@+id/button3"
        android:layout_width="232dp"
        android:layout_height="38dp"
        android:text="@string/btn_con"
        android:textSize="18sp"
        android:textColor="#FFFFFF"
        android:background="#4d5568"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/editText5"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="0dp"
        app:layout_constraintVertical_bias="0.253" />

</android.support.constraint.ConstraintLayout>
