<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pimwimon.applicationforhealthy.HistoryActivity"
    android:background="#c6d5f4"
    >

    <TextView
        android:id="@+id/textView8"
        android:layout_width="385dp"
        android:layout_height="51dp"
        android:background="#4d5568"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="0dp"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_editor_absoluteX="1dp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="316dp"
        android:layout_height="30dp"
        android:background="#FFFFFF"
        android:layout_marginTop="0dp"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="0dp"
        app:layout_constraintVertical_bias="0.049"
        app:layout_constraintTop_toBottomOf="@+id/spinner_month" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="314dp"
        android:layout_height="99dp"
        android:background="#FFFFFF"
        android:layout_marginTop="0dp"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="@+id/textView9"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/textView9"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="0dp"
        app:layout_constraintVertical_bias="0.677"
        app:layout_constraintTop_toBottomOf="@+id/spinner_month" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="316dp"
        android:layout_height="30dp"
        android:background="#FFFFFF"
        android:layout_marginTop="0dp"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="0dp"
        app:layout_constraintVertical_bias="0.447"
        app:layout_constraintTop_toBottomOf="@+id/spinner_month" />


    <TextView
        android:id="@+id/textView12"
        android:layout_width="314dp"
        android:layout_height="99dp"
        android:background="#FFFFFF"
        android:layout_marginTop="0dp"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="@+id/textView9"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/textView9"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="0dp"
        app:layout_constraintVertical_bias="0.183"
        app:layout_constraintTop_toBottomOf="@+id/spinner_month"
        app:layout_constraintHorizontal_bias="1.0" />


    <Spinner
        android:id="@+id/spinner_day"
        android:spinnerMode="dropdown"
        android:entries="@array/day_list"
        android:textAlignment="center"
        android:layout_width="87dp"
        android:layout_height="42dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="0dp"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="0dp"
        app:layout_constraintHorizontal_bias="0.023"
        app:layout_constraintVertical_bias="0.162" />
    <Spinner
        android:id="@+id/spinner_month"
        android:spinnerMode="dropdown"
        android:entries="@array/month_list"
        android:textAlignment="center"
        android:layout_width="146dp"
        android:layout_height="41dp"
        app:layout_constraintTop_toTopOf="@+id/spinner_day"
        android:layout_marginTop="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/spinner_day"
        android:layout_marginBottom="0dp"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/spinner_day" />

    <Spinner
        android:id="@+id/spinner_year"
        android:spinnerMode="dropdown"
        android:entries="@array/year_list"
        android:textAlignment="center"
        android:layout_width="100dp"
        android:layout_height="42dp"
        app:layout_constraintTop_toTopOf="@+id/spinner_day"
        android:layout_marginTop="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/spinner_day"
        android:layout_marginBottom="0dp"
        app:layout_constraintHorizontal_bias="0.914"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/spinner_day" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/history"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/textView8"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/textView8"
        app:layout_constraintTop_toTopOf="@+id/textView8"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView8"
        android:layout_marginBottom="0dp"
        app:layout_constraintHorizontal_bias="0.025"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="ContentDescription" />

    <Button
        android:id="@+id/button4"
        android:layout_width="395dp"
        android:layout_height="51dp"
        android:text="@string/back_to_home"
        android:background="#4d5568"
        android:textSize="20sp"
        android:textColor="#FFFFFF"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/textView10"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/textView10"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView10"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintHorizontal_bias="0.447"
        app:layout_constraintVertical_bias="0.733"
        tools:layout_editor_absoluteX="-6dp"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tab_history"
        android:textSize="20sp"
        android:textColor="#FFFFFF"
        app:layout_constraintLeft_toRightOf="@+id/imageView5"
        android:layout_marginLeft="0dp"
        app:layout_constraintTop_toTopOf="@+id/textView8"
        android:layout_marginTop="0dp"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="@+id/textView8"
        app:layout_constraintBottom_toBottomOf="@+id/textView8"
        android:layout_marginBottom="0dp"
        app:layout_constraintHorizontal_bias="0.028"
        app:layout_constraintVertical_bias="0.444" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="124dp"
        android:layout_height="32dp"
        android:text="@string/list_food"
        android:textSize="16sp"
        android:textColor="#000000"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        app:layout_constraintHorizontal_bias="0.138"
        app:layout_constraintVertical_bias="0.205"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="173dp"
        android:layout_height="25dp"
        android:text="@string/list_exercise"
        android:textSize="16sp"
        android:textColor="#000000"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="@+id/textView18"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/textView18"
        app:layout_constraintBottom_toBottomOf="@+id/textView11"
        android:layout_marginBottom="0dp"
        android:layout_marginTop="0dp"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintTop_toTopOf="@+id/textView11" />
</android.support.constraint.ConstraintLayout>
